force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/AiAgentSessionStartTimestamp__c.field-meta.xml
<CustomField>
    <fullName>AiAgentSessionStartTimestamp__c</fullName>
    <label>AI Agent Session Start Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AI Agent Session Start Timestamp</labelOverride>
        <masterLabel>AI Agent Session Start Timestamp</masterLabel>
        <refAttrDeveloperName>AiAgentSessionStartTimestamp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>