force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/CreatedByUserId__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUserId__c</fullName>
    <label>Created By User Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created By User Id</labelOverride>
        <masterLabel>Created By User Id</masterLabel>
        <refAttrDeveloperName>CreatedByUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>