force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/KQ_AiAgentInteractionId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentInteractionId__c</fullName>
    <label>Key Qualifier AI Agent Interaction</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Interaction</labelOverride>
        <masterLabel>Key Qualifier AI Agent Interaction</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentInteractionId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>