force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/KQ_AiAgentMomentId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentMomentId__c</fullName>
    <label>Key Qualifier AI Agent Moment Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Moment Id</labelOverride>
        <masterLabel>Key Qualifier AI Agent Moment Id</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentMomentId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>