force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/KQ_AiAgentTagDefinitionAssociationId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentTagDefinitionAssociationId__c</fullName>
    <label>Key Qualifier AI Agent Tag Definition As</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Tag Definition Association Id</labelOverride>
        <masterLabel>Key Qualifier AI Agent Tag Definition As</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentTagDefinitionAssociationId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>