force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/KQ_AiAgentTagId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentTagId__c</fullName>
    <label>Key Qualifier AI Agent Tag Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Tag Id</labelOverride>
        <masterLabel>Key Qualifier AI Agent Tag Id</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentTagId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>