force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/OutcomeType__c.field-meta.xml
<CustomField>
    <fullName>OutcomeType__c</fullName>
    <label>Outcome Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Outcome Type</labelOverride>
        <masterLabel>Outcome Type</masterLabel>
        <refAttrDeveloperName>OutcomeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>