force-app/main/default/objects/ssot__AiAgentTagAssociation__dlm/fields/ValueText__c.field-meta.xml
<CustomField>
    <fullName>ValueText__c</fullName>
    <label>Value</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Value</labelOverride>
        <masterLabel>Value</masterLabel>
        <refAttrDeveloperName>ValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>